[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = [
  "einops>=0.6.1",
  "numpy>=1.21.6",
  "pyvista>=0.38.6",
  "torch>=1.13.1",
  "torchvision>=0.14.1",
  "trimesh==4.4.9",
  "ubelt>=1.3.6",
]
description = "Add your description here"
name = "sculptor"
readme = "README.md"
requires-python = ">= 3.7"
version = "0.1.0"

[tool.rye]
dev-dependencies = ["icecream>=2.1.3"]
managed = true
virtual = true
